# coco

./: cabal.project  fibber.html  flake.nix  kata.cabal  kata.prof  kata.prof.html  mydatabase.db
app/: Main.hs
nix/: hix.nix
src/: Account.hs  Conwayy.hs  Db.hs  Deadlock.hs  Dejafu.hs  Dispenser.hs  DistributedP.hs  DoubleCola.hs  Eac.hs  Fibo.hs  FileReadEmulate.hs  Linear.hs  ListZipper.hs  Par.hs  Piece.hs  Piece2.hs  PingTc.hs  Pinger.hs  PrintInOrder.hs  SeqFileRead.hs  Server.hs  Snail.hs  SpecIt.hs  SpecIt2.hs  Stm.hs  WordSearch2.hs  Yoneda.hs  conway.hs
test/: Spec.hs
