cabal-version: 3.0

name: kata
version: 1.0.0.0

common common-all
    build-depends:
        base >=4.7 && <5,
        --speculate,
        quickspec >= 2.1.5,
        --binary,
        --ghc-prof,
        --bytestring,
        --parallel,
        --random,
        --exceptions,
        --comonad,
        --filepath,
        --concurrency,
        --streams,
        relude,
        --containers,
        --adjunctions,
        --async,
        --monad-loops,
        --stm,
        --dejafu,
        --tasty-dejafu,
        --unliftio,
        --criterion
    other-modules:
        --Yoneda
        --Par
        --PrintInOrder
        --SeqFileRead
        --FileReadEmulate
        --Deadlock
        --Dejafu
        --Linear
        Piece
        SpecIt
        --Stm
        --ListZipper
        --Conwayy
        --Fibo
        --Eac
        --WordSearch2
        --Snail
        --Dispenser
        --DoubleCola
    mixins:
        base hiding (Prelude)
        , relude (Relude as Prelude)
        , relude
    default-language: Haskell2010
    default-extensions:
        ConstraintKinds
        DeriveAnyClass
        DeriveFoldable
        DeriveTraversable
        DeriveFunctor
        DeriveGeneric
        DerivingStrategies
        FlexibleContexts
        FlexibleInstances
        GeneralizedNewtypeDeriving
        InstanceSigs
        KindSignatures
        LambdaCase
        MultiParamTypeClasses
        OverloadedStrings
        RecordWildCards
        ScopedTypeVariables
        StandaloneDeriving
        TupleSections
        TypeApplications
        ViewPatterns
        DerivingVia
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints

library
    import: common-all
    hs-source-dirs:   src

executable kata
    import: common-all
    main-is: Main.hs
    ghc-options: -eventlog -threaded -rtsopts -with-rtsopts=-N
    hs-source-dirs: app, src

test-suite kata-test
    import: common-all
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
    other-modules:
    hs-source-dirs:
        src
        --, test
    --build-depends:
        --, tasty
        --, tasty-hunit
        --, tasty-quickcheck
